--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,10 @@ repositories {
 }
 
 dependencies {
+	implementation "org.slf4j:log4j-over-slf4j:1.7.13"
+	implementation "ch.qos.logback:logback-classic:1.1.3"
+	implementation "net.logstash.logback:logstash-logback-encoder:4.5.1"
+
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'io.grpc:grpc-netty-shaded:1.42.1'
 	implementation 'io.grpc:grpc-protobuf:1.42.1'
