--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,10 @@ repositories {
 }
 
 dependencies {
-	implementation "org.slf4j:log4j-over-slf4j:1.7.13"
-	implementation "ch.qos.logback:logback-classic:1.1.3"
+	implementation "ch.qos.logback:logback-core:1.2.6"
+	testImplementation "org.slf4j:slf4j-api:1.7.30"
+
+	implementation "ch.qos.logback:logback-classic:1.2.6"
 	implementation "net.logstash.logback:logstash-logback-encoder:4.5.1"
 
 	implementation 'org.springframework.boot:spring-boot-starter-web'
